--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@duonghaidang/react-native-text-more",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Add a 'See More' and optionally a 'See Less' button to text that exceeds a given number of lines",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/duonghaidang/react-native-text-see-more.git"
+    "url": "git+https://github.com/duonghaidang/react-native-text-more.git"
   },
   "main": "index.tsx",
   "files": [
@@ -14,13 +14,13 @@
   "author": "duonghaidang",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/duonghaidang/react-native-text-see-more/issues"
+    "url": "https://github.com/duonghaidang/react-native-text-more/issues"
   },
-  "homepage": "https://github.com/duonghaidang/react-native-text-see-more#readme",
+  "homepage": "https://github.com/duonghaidang/react-native-text-more#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native-text-see-more"
+    "react-native-text-more"
   ]
 }
